# CPL-homework

./: Bye-JonaBell.c  CMakeLists.txt  Inverse.c  a+b.c  b-ternary-1.c  b-ternary-2.c  behaviors.c  bit.c  bubble_sort.c  calculator.c  calendar.c  casual.c  collatz.c  decimal.c  equation-2.c  factorial-2.c  filp.c  formation.c  gcd.c  guess.c  josephus.c  leap.c  life.c  magic-square.c  main.c  match.c  matrix-mult.c  mines-1.c  multiplication-table.c  palindrome-2.c  prime.c  reverse-oj.c  seer.c  selfpower.c  series.c  similarity.c  softmax.c  statistics-2.c  sudoku.c  tictactoe.c  (+32 more)
