cmake_minimum_required(VERSION 3.29)
project(untitled14 C)

set(CMAKE_C_STANDARD 11)

add_executable(single main.c)
add_executable(multi leap.c)
add_executable(multi2 selfpower.c)
add_executable(multi3 series.c)
add_executable(multi4 collatz.c)
add_executable(multi5 Inverse.c)
add_executable(multi6 prime.c)
add_executable(multi7 factorial-2.c)
add_executable(multi8 gcd.c)
add_executable(multi9 multiplication-table.c)
add_executable(multi10 calendar.c)
add_executable(multi11 calculator.c)
add_executable(multi12 trial.c)
add_executable(multi13 decimal.c)
add_executable(multi14 a+b.c)
add_executable(multi15 palindrome-2.c)
add_executable(multi16 statistics-2.c)
add_executable(multi17 filp.c)
add_executable(multi18 josephus.c)
add_executable(multi19 bubble_sort.c)
add_executable(multi20 casual.c)
add_executable(multi21 b-ternary-1.c)
add_executable(multi22 b-ternary-2.c)
add_executable(multi23 similarity.c)
add_executable(multi24 equation-2.c)
add_executable(multi25 life.c)
add_executable(multi26 bit.c)
add_executable(multi27 behaviors.c)
add_executable(multi28 matrix-mult.c)
add_executable(multi29 guess.c)
add_executable(multi30 sudoku.c)
add_executable(multi31 mines-1.c)
add_executable(multi32 magic-square.c)
add_executable(multi33 match.c)
add_executable(multi34 softmax.c)
add_executable(multi35 trace.c)
add_executable(multi36 seer.c)
add_executable(multi37 obstacle.c)
add_executable(multi38 formation.c)
add_executable(multi39 reverse-oj.c)
add_executable(multi40 tictactoe.c)
add_executable(multi41 Bye-JonaBell.c)